i apparently removed the wrong margin, nowwwwww the edit buttons are fixed lol

--- a/client/src/pages/Reviews.css
+++ b/client/src/pages/Reviews.css
@@ -29,7 +29,6 @@
     font-weight: 400;
     transition: 0.5s;
     float: right;
-    margin-right: 500px;
   }
 
   .rev-btn:hover {
